- 
    Bug 
- 
    Resolution: Done
- 
    P2: Important 
- 
    5.12.0
- 
    Boot2qt 5.12.0 + any i.MX6 based hw.
- 
        
- 
        c7bd3131a8854814d59881339ac1d7a4af3c9863 (qt/qtmultimedia/5.13)
When playing video with gstreamer backend log/console is filled with warnings that there is still memory pages in use when video playback ends/starts again in loop:
-----------[ cut here ]-----------
WARNING: CPU: 0 PID: 765 at /usr/src/kernel/mm/page_alloc.c:7393 free_contig_range+0x94/0x98
102 pages are still in use!
Modules linked in: ov5642_camera ov5640_camera_mipi_int snd_soc_hdmi_codec mxc_v4l2_capture ipu_bg_overlay_sdc ipu_still ipu_prp_enc snd_soc_imx_hdmi snd_soc_fsl_hdmi ipu_csi_enc tsc2004 tsc200x_core ipu_fg_overlay_sdc ili210x adv7180_tvin tc35874)
CPU: 0 PID: 765 Comm: multiqueue0:src Tainted: G W O 4.9.88-1.0.0-ga+yocto+g46f9b57 #1
Hardware name: Freescale i.MX6 Quad/DualLite (Device Tree)
Backtrace: 
[<8010c37c>] (dump_backtrace) from [<8010c670>] (show_stack+0x18/0x1c)
 r7:600e0013 r6:80d1f1b0 r5:00000000 r4:80d1f1b0
[<8010c658>] (show_stack) from [<8041e948>] (dump_stack+0x80/0x94)
[<8041e8c8>] (dump_stack) from [<8012dff4>] (__warn+0xec/0x104)
 r7:00000009 r6:80a36944 r5:00000000 r4:8b6adc4c
[<8012df08>] (__warn) from [<8012e05c>] (warn_slowpath_fmt+0x50/0x6c)
 r9:80dbf7bc r8:80daac80 r7:80d06444 r6:0002a277 r5:80a370d4 r4:80d03108
[<8012e010>] (warn_slowpath_fmt) from [<801e5208>] (free_contig_range+0x94/0x98)
 r3:00000066 r2:80a370d4
 r5:00000066 r4:0002a277
[<801e5174>] (free_contig_range) from [<80225640>] (cma_release+0x88/0xa4)
 r9:80dbf7bc r8:80d03108 r7:80115de0 r6:00000000 r5:0002a200 r4:80dac9f0
[<802255b8>] (cma_release) from [<805460ac>] (dma_release_from_contiguous+0x38/0x3c)
 r5:00077000 r4:8d9ab000
[<80546074>] (dma_release_from_contiguous) from [<801153bc>] (cma_allocator_free+0x58/0x7c)
[<80115364>] (cma_allocator_free) from [<80115dcc>] (__arm_dma_free.constprop.3+0x144/0x158)
 r7:80115de0 r6:9a200000 r5:80d03108 r4:8b799ec0
[<80115c88>] (__arm_dma_free.constprop.3) from [<80115dfc>] (arm_dma_free+0x1c/0x24)
 r6:2a200000 r5:9a200000 r4:00077000
[<80115de0>] (arm_dma_free) from [<806c2aa8>] (vpu_free_dma_buffer+0x94/0xb4)
[<806c2a14>] (vpu_free_dma_buffer) from [<806c34f8>] (vpu_release+0x17c/0x314)
 r7:8b799100 r6:8b799640 r5:8b6add6c r4:80dbf790
[<806c337c>] (vpu_release) from [<8022afec>] (__fput+0x8c/0x1e4)
 r10:8a5cd2f0 r9:00000008 r8:00000000 r7:8a6c8e10 r6:88008110 r5:8a5cd2f0
 r4:8b5b16c0
[<8022af60>] (_fput) from [<8022b1a4>] (___fput+0x10/0x14)
 r10:80a30468 r9:8a78d1b8 r8:8b5b1c00 r7:8b465d80 r6:8b4661a0 r5:80d5e7f4
 r4:8b46617c
[<8022b194>] (____fput) from [<8014aad0>] (task_work_run+0xc0/0xe0)
[<8014aa10>] (task_work_run) from [<80130dcc>] (do_exit+0x33c/0x9d0)
 r9:8a78d1b8 r8:00000000 r7:8b6ade2c r6:8a78d180 r5:8b46619c r4:8b465d80
[<80130a90>] (do_exit) from [<801325ac>] (do_group_exit+0x48/0xc4)
 r7:00418004
[<80132564>] (do_group_exit) from [<8013cc58>] (get_signal+0x16c/0x648)
 r7:00418004 r6:8a4bf344 r5:ffffe000 r4:08430000
[<8013caec>] (get_signal) from [<8010b998>] (do_signal+0x7c/0x43c)
 r10:00000020 r9:761949ec r8:fffffe00 r7:8b6adec4 r6:80d03108 r5:761949e8
 r4:8b6adfb0
[<8010b91c>] (do_signal) from [<8010bf24>] (do_work_pending+0xac/0xbc)
 r10:00000020 r9:8b6ac000 r8:801084a4 r7:00000036 r6:8b6adfb0 r5:801084a4
 r4:ffffe000
[<8010be78>] (do_work_pending) from [<80108340>] (slow_work_pending+0xc/0x20)
 r7:00000036 r6:000001f4 r5:63f4b398 r4:63f4b000
--[ end trace bef94412c74834c1 ]--
-----------[ cut here ]-----------
- is duplicated by
- 
                    QTBUG-77720 QtMediaplayer Qt-5.12.4 play movies physical memory leak -         
- Closed
 
-         
- relates to
- 
                    QTBUG-93200 Kernel complains non-freed memory when video playback ends/starts again in loop -         
- Closed
 
-