imx6: Fix mapping VPU texture using real physical address of data

* Get real physical address of video frame data and provide it to
  imx6 vivante videonode to prevent memory leak from kernel.

By default qtmultimedia does not depend on gstreamer-imx,
but the plugin should exist on imx platform.

So gstreamer_imxcommon will be disabled.
And should be manually enabled in yocto receipt.

Change-Id: I6e75746a2ba651d12bdd7697ae483699aad450fc
Fixes: QTBUG-73084
Reviewed-by: Ville Voutilainen <ville.voutilainen@qt.io>